--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#DB connection details
+spring.datasource.url=jdbc:h2:mem:pokemon_db
+spring.datasource.username=root
+spring.datasource.password=
+#h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
 
